[tool.poetry]
name = "policy-classifier"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.3.3"
scikit-learn = "^1.0"
ipdb = "^0.13.9"
dill = "^0.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^0.910"
pytest = "^7.1.2"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^5.0.4"
isort = "^5.12.0"
shellcheck-py = "^0.9.0.5"
shfmt-py = "^3.7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "integration: slower integration tests",
]

[tool.mypy]
allow_redefinition = true
files = "src"

[[tool.mypy.overrides]]
module = [
    "pandas",
    "numpy",
    "ipdb",
    "sklearn.*",
    "dill"
]
ignore_missing_imports = true
